--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -3,8 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/loseFragment">
-
+    app:startDestination="@id/titleFragment">
+    <fragment
+        android:id="@+id/titleFragment"
+        android:name="com.fenice.calculationtest.TitleFragment"
+        android:label="fragment_title"
+        tools:layout="@layout/fragment_title" >
+        <action
+            android:id="@+id/action_titleFragment_to_questionFragment2"
+            app:destination="@id/questionFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/questionFragment2"
+        android:name="com.fenice.calculationtest.QuestionFragment"
+        android:label="fragment_question"
+        tools:layout="@layout/fragment_question" >
+        <action
+            android:id="@+id/action_questionFragment2_to_loseFragment"
+            app:destination="@id/loseFragment" />
+        <action
+            android:id="@+id/action_questionFragment2_to_winFragment"
+            app:destination="@id/winFragment" />
+    </fragment>
     <fragment
         android:id="@+id/loseFragment"
         android:name="com.fenice.calculationtest.LoseFragment"
@@ -13,27 +33,6 @@
         <action
             android:id="@+id/action_loseFragment_to_titleFragment"
             app:destination="@id/titleFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/questionFragment"
-        android:name="com.fenice.calculationtest.QuestionFragment"
-        android:label="fragment_question"
-        tools:layout="@layout/fragment_question" >
-        <action
-            android:id="@+id/action_questionFragment_to_winFragment"
-            app:destination="@id/winFragment" />
-        <action
-            android:id="@+id/action_questionFragment_to_loseFragment"
-            app:destination="@id/loseFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/titleFragment"
-        android:name="com.fenice.calculationtest.TitleFragment"
-        android:label="fragment_title"
-        tools:layout="@layout/fragment_title" >
-        <action
-            android:id="@+id/action_titleFragment_to_questionFragment"
-            app:destination="@id/questionFragment" />
     </fragment>
     <fragment
         android:id="@+id/winFragment"
