--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/titleFragment"
         android:name="com.fenice.calculationtest.TitleFragment"
-        android:label="fragment_title"
+        android:label="@string/title_nav_message"
         tools:layout="@layout/fragment_title" >
         <action
             android:id="@+id/action_titleFragment_to_questionFragment2"
@@ -16,7 +16,7 @@
     <fragment
         android:id="@+id/questionFragment2"
         android:name="com.fenice.calculationtest.QuestionFragment"
-        android:label="fragment_question"
+        android:label="@string/question_nav_message"
         tools:layout="@layout/fragment_question" >
         <action
             android:id="@+id/action_questionFragment2_to_loseFragment"
@@ -28,7 +28,7 @@
     <fragment
         android:id="@+id/loseFragment"
         android:name="com.fenice.calculationtest.LoseFragment"
-        android:label="fragment_lose"
+        android:label="@string/lose_nav_message"
         tools:layout="@layout/fragment_lose" >
         <action
             android:id="@+id/action_loseFragment_to_titleFragment"
@@ -37,7 +37,7 @@
     <fragment
         android:id="@+id/winFragment"
         android:name="com.fenice.calculationtest.WinFragment"
-        android:label="fragment_win"
+        android:label="@string/win_nav_message"
         tools:layout="@layout/fragment_win" >
         <action
             android:id="@+id/action_winFragment_to_titleFragment"
